--- a/Dockerfile.nvidia
+++ b/Dockerfile.nvidia
@@ -14,21 +14,21 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
-FROM nvidia/cuda:11.6.2-cudnn8-devel-ubuntu20.04
+FROM nvidia/cuda:11.8.0-cudnn8-devel-ubuntu22.04
 LABEL description="Anaconda 3 GPU Container"
 
 # $ docker build --network=host -t xychelsea/anaconda3:latest-gpu -f Dockerfile.nvidia .
 # $ docker run --rm -it --gpus=all xychelsea/anaconda3:latest-gpu /bin/bash
 # $ docker push xychelsea/anaconda3:latest-gpu
 
-ARG ANACONDA_CONTAINER="v0.5.1"
-ARG ANACONDA_DIST="Miniconda3"
-ARG ANACONDA_PYTHON="py39"
-ARG ANACONDA_CONDA="4.12.0"
+# ARG ANACONDA_CONTAINER="v0.5.1"
+# ARG ANACONDA_DIST="Miniconda3"
+# ARG ANACONDA_PYTHON="pypy39"
 ARG ANACONDA_OS="Linux"
 ARG ANACONDA_ARCH="x86_64"
 ARG ANACONDA_FLAVOR="Miniforge3"
-ARG ANACONDA_PATCH="1"
+ARG ANACONDA_CONDA="22.11.1"
+ARG ANACONDA_PATCH="4"
 ARG ANACONDA_VERSION="${ANACONDA_CONDA}-${ANACONDA_PATCH}"
 ARG ANACONDA_INSTALLER="${ANACONDA_FLAVOR}-${ANACONDA_VERSION}-${ANACONDA_OS}-${ANACONDA_ARCH}.sh"
 ARG ANACONDA_ENV="base"
@@ -46,12 +46,13 @@ ENV NVIDIA_VISIBLE_DEVICES=all
 ENV NVIDIA_DRIVER_CAPABILITIES=compute,utility
 
 # Update packages
-RUN apt-get update --fix-missing \
-    && apt-get -y upgrade \
-    && apt-get -y dist-upgrade
+# RUN apt-get update --fix-missing \
+#     && apt-get -y upgrade \
+#     && apt-get -y dist-upgrade
 
 # Install dependencies
-RUN apt-get install -y --no-install-recommends \
+RUN apt-get update \
+    && apt-get install -y --no-install-recommends \
     bzip2 \
     ca-certificates \
     curl \
