--- a/Dockerfile.nvidia
+++ b/Dockerfile.nvidia
@@ -14,16 +14,16 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
-FROM nvidia/cuda:11.8.0-cudnn8-devel-ubuntu22.04
+FROM nvidia/cuda:11.6.2-cudnn8-devel-ubuntu20.04
 LABEL description="Anaconda 3 GPU Container"
 
 # $ docker build --network=host -t xychelsea/anaconda3:latest-gpu -f Dockerfile.nvidia .
 # $ docker run --rm -it --gpus=all xychelsea/anaconda3:latest-gpu /bin/bash
 # $ docker push xychelsea/anaconda3:latest-gpu
 
-# ARG ANACONDA_CONTAINER="v0.5.1"
-# ARG ANACONDA_DIST="Miniconda3"
-# ARG ANACONDA_PYTHON="pypy39"
+ARG ANACONDA_CONTAINER="v0.5.1"
+ARG ANACONDA_DIST="Miniconda3"
+ARG ANACONDA_PYTHON="pypy39"
 ARG ANACONDA_OS="Linux"
 ARG ANACONDA_ARCH="x86_64"
 ARG ANACONDA_FLAVOR="Miniforge3"
