--- a/Dockerfile.nvidia
+++ b/Dockerfile.nvidia
@@ -46,9 +46,9 @@ ENV NVIDIA_VISIBLE_DEVICES=all
 ENV NVIDIA_DRIVER_CAPABILITIES=compute,utility
 
 # Update packages
-# RUN apt-get update --fix-missing \
-#     && apt-get -y upgrade \
-#     && apt-get -y dist-upgrade
+RUN apt-get update --fix-missing \
+    && apt-get -y upgrade \
+    && apt-get -y dist-upgrade
 
 # Install dependencies
 RUN apt-get update \
